--- a/html/alphabet.html
+++ b/html/alphabet.html
@@ -1,162 +1,141 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="author" content="Sofia Torres" />
-    <meta
-      name="description"
-      content="Sitio web sobre los beneficios de la avena para la salud"
-    />
-    <link rel="stylesheet" href="../css/normalize.css" />
-    <link rel="stylesheet" href="../css/styles.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-    />
-    <title>Alphabet</title>
-  </head>
-  <body>
-    <header>
-      <h2>
-        <a class="final_page" href="/index.html">English Advance</a>
-      </h2>
-      <nav>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="author" content="Sofia Torres" />
+  <meta name="description" content="Sitio web sobre los beneficios de la avena para la salud" />
+  <link rel="stylesheet" href="/css/normalize.css" />
+  <link rel="stylesheet" href="/css/styles.css" />
+  <link rel="stylesheet" href="/css/nav.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+  <title>Alphabet</title>
+</head>
+
+<body>
+
+  <header style="z-index: 100;"><h1><a style="color: white;" href="/index.html">English Topics</a></h1></header>
+  <div id="nav-container">
+    <div class="bg"></div>
+    <div class="button" tabindex="0">
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+    </div>
+    <div id="nav-content" tabindex="0">
+      <ul>
+        <li><i class="fas fa-book"></i>
+          <a class="final_page" href="/html/alphabet.html">Alphabet</a>
+        </li>
+        <li><i class="fas fa-comments"></i>
+          <a href="/html/common_phrases.html">Common Phrases</a>
+        </li>
+        <li> <i class="fas fa-handshake"></i>
+          <a href="/html/greetings.html">Greetings</a>
+        </li>
+        <li><i class="fas fa-sort-numeric-down"></i>
+          <a href="/html/cardinal_ordinal.html">Cardinal and Ordinal</a>
+        </li>
+        <li><i class="fas fa-question-circle"></i>
+          <a href="/html/asking_answering.html"> Asking and Answering</a>
+        </li>
+        <li><i class="fas fa-chalkboard"></i>
+          <a href="/html/classroom_objects.html">Classroom Language</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+
+  <main>
+    <h1 style="padding-top: 2.5rem;">The Alphabet</h1>
+    <section class="main contenedor shadow">
+      <div class="info_principal">
+        <div class="text-column">
+          <p>
+            Muchas personas creen que comer avena debe ser aburrido y
+            monótono, sin embargo, esto se debe a que conocen esta sencilla y
+            saludable opción.
+          </p>
+          <p>
+            Perfecta para los días en los que no tengas mucho tiempo para el
+            desayuno, esta receta la dejas hecha en diez minutos la noche
+            anterior y, ¡la tienes lista para la mañana siguiente!
+          </p>
+          <p>
+            Consiste en preparar avena, agregarle frutas, proteína, especies,
+            endulzantes, o cualquier otro ingrediente al gusto, y dejarlo
+            reposar toda la noche en el refrigerador.
+          </p>
+        </div>
+        <div class="image-column">
+          <img src="../img/avena_transnochada.jpg" loading="lazy" width="240" alt="avena_transnochada" />
+        </div>
+      </div>
+      <button class="collapse-btn" onclick="toggleCollapse('ingredientes-collapse')">
+        Ingredientes
+      </button>
+      <div id="ingredientes-collapse" class="collapse">
+        <ul>
+          <li>- 1 banano</li>
+          <li>- 1 taza de leche</li>
+          <li>- 1/3 de taza de avena</li>
+          <li>- 2 cucharadas de cacao en polvo</li>
+          <li>- 1 cucharadita de esencia de vainilla</li>
+          <li>- Fruta rebanada al gusto o granos (opcional)</li>
+        </ul>
+      </div>
+
+      <button class="collapse-btn" onclick="toggleCollapse('pasos-collapse')">
+        Pasos a seguir
+      </button>
+      <div id="pasos-collapse" class="collapse">
+        <ol>
+          <li>1. Machacar el banano hasta que quede sin grumos.</li>
+          <li>
+            2. Agregar en un recipiente el banano, con 1 taza de leche, 1/3 de
+            taza de avena, 2 cucharadas de cacao en polvo y una cucharadita de
+            esencia de vainilla.
+          </li>
+          <li>3. Revolver hasta lograr una mezcla consistente.</li>
+          <li>4. Verter en un recipiente con tapa.</li>
+          <li>5. Refrigerar toda la noche.</li>
+        </ol>
+        <p>Opcionalmente:</p>
         <ul>
           <li>
-            <div class="logo">
-              <i class="fas fa-book"></i>
-              <a class="final_page" href="/html/alphabet.html">Alphabet</a>
-            </div>
+            - Cortar banano, manzana, fresas u otra fruta y agregarla encima
+            de la avena al momento de consumirla.
           </li>
           <li>
-            <div class="logo">
-              <i class="fas fa-comments"></i>
-              <a href="/html/common_phrases.html">Common Phrases</a>
-            </div>
+            - Derretir chocolate amargo y poner una capa fina encima de la
+            avena antes de refrigerar.
           </li>
+          <li>- Agregar mantequilla de maní como topping.</li>
           <li>
-            <div class="logo">
-              <i class="fas fa-handshake"></i>
-              <a href="/html/greetings.html">Greetings</a>
-            </div>
-          </li>
-          <li>
-            <div class="logo">
-              <i class="fas fa-list-ol"></i>
-              <a href="/html/cardinal_ordinal.html">Cardinal and Ordinal</a>
-            </div>
-          </li>
-          <li>
-            <div class="logo">
-              <i class="fas fa-question-circle"></i>
-              <a href="/html/asking_answering.html">Asking and Answering</a>
-            </div>
-          </li>
-          <li>
-            <div class="logo">
-              <i class="fas fa-chalkboard"></i>
-              <a href="/html/classroom_objects.html">Classroom Language</a>
-            </div>
+            - Añadir almendras, maní, coco u otros ingredientes adicionales
+            por encima.
           </li>
         </ul>
-      </nav>
-    </header>
+      </div>
+      <p>
+        Esta receta, lejos de ser enemiga de tu salud, es deliciosa y
+        altamente beneficiosa, con ingredientes naturales, fibrosos que te
+        darán la energía necesaria para comenzar el día.
+      </p>
+      <p class="center red_text">
+        Recuerda que una dieta adecuada tiene variedad y te permite disfrutar
+        de tus comidas.
+      </p>
+    </section>
+  </main>
+  <div class="footer">
+    <p>© All rights reserved. Kenneth and Christofer, 2024.</p>
+  </div>
+  <script src="../js/collapse.js"></script>
+  <script src="../js/scrollToDiv.js"></script>
+</body>
 
-    <main>
-      <h1>The Alphabet</h1>
-      <section class="main contenedor shadow">
-        <div class="info_principal">
-          <div class="text-column">
-            <p>
-              Muchas personas creen que comer avena debe ser aburrido y
-              monótono, sin embargo, esto se debe a que conocen esta sencilla y
-              saludable opción.
-            </p>
-            <p>
-              Perfecta para los días en los que no tengas mucho tiempo para el
-              desayuno, esta receta la dejas hecha en diez minutos la noche
-              anterior y, ¡la tienes lista para la mañana siguiente!
-            </p>
-            <p>
-              Consiste en preparar avena, agregarle frutas, proteína, especies,
-              endulzantes, o cualquier otro ingrediente al gusto, y dejarlo
-              reposar toda la noche en el refrigerador.
-            </p>
-          </div>
-          <div class="image-column">
-            <img
-              src="../img/avena_transnochada.jpg"
-              loading="lazy"
-              width="240"
-              alt="avena_transnochada"
-            />
-          </div>
-        </div>
-        <button
-          class="collapse-btn"
-          onclick="toggleCollapse('ingredientes-collapse')"
-        >
-          Ingredientes
-        </button>
-        <div id="ingredientes-collapse" class="collapse">
-          <ul>
-            <li>- 1 banano</li>
-            <li>- 1 taza de leche</li>
-            <li>- 1/3 de taza de avena</li>
-            <li>- 2 cucharadas de cacao en polvo</li>
-            <li>- 1 cucharadita de esencia de vainilla</li>
-            <li>- Fruta rebanada al gusto o granos (opcional)</li>
-          </ul>
-        </div>
-
-        <button class="collapse-btn" onclick="toggleCollapse('pasos-collapse')">
-          Pasos a seguir
-        </button>
-        <div id="pasos-collapse" class="collapse">
-          <ol>
-            <li>1. Machacar el banano hasta que quede sin grumos.</li>
-            <li>
-              2. Agregar en un recipiente el banano, con 1 taza de leche, 1/3 de
-              taza de avena, 2 cucharadas de cacao en polvo y una cucharadita de
-              esencia de vainilla.
-            </li>
-            <li>3. Revolver hasta lograr una mezcla consistente.</li>
-            <li>4. Verter en un recipiente con tapa.</li>
-            <li>5. Refrigerar toda la noche.</li>
-          </ol>
-          <p>Opcionalmente:</p>
-          <ul>
-            <li>
-              - Cortar banano, manzana, fresas u otra fruta y agregarla encima
-              de la avena al momento de consumirla.
-            </li>
-            <li>
-              - Derretir chocolate amargo y poner una capa fina encima de la
-              avena antes de refrigerar.
-            </li>
-            <li>- Agregar mantequilla de maní como topping.</li>
-            <li>
-              - Añadir almendras, maní, coco u otros ingredientes adicionales
-              por encima.
-            </li>
-          </ul>
-        </div>
-        <p>
-          Esta receta, lejos de ser enemiga de tu salud, es deliciosa y
-          altamente beneficiosa, con ingredientes naturales, fibrosos que te
-          darán la energía necesaria para comenzar el día.
-        </p>
-        <p class="center final_page">
-          Recuerda que una dieta adecuada tiene variedad y te permite disfrutar
-          de tus comidas.
-        </p>
-      </section>
-    </main>
-    <div class="footer">
-      <p>© All rights reserved. Kenneth and Christofer, 2024.</p>
-    </div>
-    <script src="../js/collapse.js"></script>
-    <script src="../js/scrollToDiv.js"></script>
-  </body>
 </html>
