--- a/html/common_phrases.html
+++ b/html/common_phrases.html
@@ -1,176 +1,160 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="author" content="Sofia Torres" />
-    <meta
-      name="description"
-      content="Sitio web sobre los beneficios de la avena para la salud"
-    />
-    <link rel="stylesheet" href="../css/normalize.css" />
-    <link rel="stylesheet" href="../css/styles.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-    />
-    <title>Common Phrases</title>
-  </head>
-  <body>
-    <header>
-      <h2>
-        <a class="final_page" href="/index.html">English Advance</a>
-      </h2>
-      <nav>
-        <ul>
-          <li>
-            <div class="logo">
-              <i class="fas fa-book"></i>
-              <a href="/html/alphabet.html">Alphabet</a>
-            </div>
-          </li>
-          <li>
-            <div class="logo">
-              <i class="fas fa-comments"></i>
-              <a class="final_page" href="/html/common_phrases.html">Common Phrases</a>
-            </div>
-          </li>
-          <li>
-            <div class="logo">
-              <i class="fas fa-handshake"></i>
-              <a href="/html/greetings.html">Greetings</a>
-            </div>
-          </li>
-          <li>
-            <div class="logo">
-              <i class="fas fa-list-ol"></i>
-              <a href="/html/cardinal_ordinal.html">Cardinal and Ordinal</a>
-            </div>
-          </li>
-          <li>
-            <div class="logo">
-              <i class="fas fa-question-circle"></i>
-              <a href="/html/asking_answering.html">Asking and Answering</a>
-            </div>
-          </li>
-          <li>
-            <div class="logo">
-              <i class="fas fa-chalkboard"></i>
-              <a href="/html/classroom_objects.html">Classroom Language</a>
-            </div>
-          </li>
-        </ul>
-      </nav>
-    </header>
 
-    <main>
-      <h1>Common Phrases</h1>
-      <section class="main contenedor shadow">
-        <div class="info_principal">
-          <div class="text-column">
-            <p>
-              Para las personas que intentan reducir su consumo de calorías, o
-              bien reducir los carbohidratos y aumentar la proteína,
-              <span class="final_page">esta receta es ideal.</span>
-            </p>
-            <p>
-              No es necesario dejar de lado el pan, con esta receta es posible
-              hacerlo sin usar harina.
-            </p>
-            <p>¡Con pocos ingredientes y alta en proteína!</p>
-          </div>
-          <div class="image-column">
-            <img src="../img/pan_avena.jpg" loading="lazy" width="200" alt="avena_pan" />
-          </div>
-        </div>
-        <button
-          class="collapse-btn"
-          onclick="toggleCollapse('ingredientes-collapse')"
-        >
-          Ingredientes
-        </button>
-        <div id="ingredientes-collapse" class="collapse">
-          <ul>
-            <li>- 1/3 taza (30 gramos) de avena</li>
-            <li>- ½ cucharadita de polvo de hornear</li>
-            <li>- 1 cucharada de yogurt natural o griego.</li>
-            <li>- 1 huevo</li>
-            <li>- 1 pizca de sola</li>
-          </ul>
-        </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="author" content="Sofia Torres" />
+  <meta name="description" content="Sitio web sobre los beneficios de la avena para la salud" />
+  <link rel="stylesheet" href="/css/normalize.css" />
+  <link rel="stylesheet" href="/css/styles.css" />
+  <link rel="stylesheet" href="/css/nav.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+  <title>Common Phrases</title>
+</head>
 
-        <button class="collapse-btn" onclick="toggleCollapse('pasos-collapse')">
-          Pasos a seguir
-        </button>
-        <div id="pasos-collapse" class="collapse">
-          <ol>
-            <li>1. Colocar en un recipiente 1/3 taza (30 gramos) de avena.</li>
-            <li>
-              2. Se agrega ½ cucharadita de polvo de hornear y una cucharadita
-              de agua.
-            </li>
-            <li>3. Se mezclan los ingredientes y dejan remojar 5 minutos.</li>
-            <li>
-              4. Se agrega 1 cucharada de yogurt natural o griego, 1 huevo y 1
-              pizca de sal.
-            </li>
-            <li>5. Se revuelve hasta que quede una mezcla consistente.</li>
-            <li>6. Precalentar la sartén a fuego medio bajo.</li>
-            <li>
-              7. Agregar la mezcla a la sartén y añadir orégano, nueces o
-              especies al gusto.
-            </li>
-            <li>8. Esperar 5 minutos hasta que la masa esté sólida.</li>
-          </ol>
-        </div>
-        <div class="table">
-          <div class="table-container">
-            <table>
-              <caption>
-                100 gramos de yogurt griego
-              </caption>
-              <tr>
-                <th>Característica</th>
-                <th>Valor</th>
-              </tr>
-              <tr>
-                <td>Calorías</td>
-                <td>120 kc</td>
-              </tr>
-              <tr>
-                <td>Azúcar</td>
-                <td>4 g</td>
-              </tr>
-              <tr>
-                <td>Proteína</td>
-                <td>10 g</td>
-              </tr>
-            </table>
-          </div>
-
-          <div class="paragraphs-container">
-            <p>
-              Una vez preparado este delicioso pan de avena, podemos comerlo
-              así, o cortarlo a la mitad y hacer un sándwich, usando el relleno
-              que deseemos: pollo, carne, jamón, acompañado de lechuga, queso,
-              aderezos y vegetales.
-            </p>
-          </div>
-        </div>
-        <p>
-          Esta saludable opción tiene alrededor 140 calorías y tanto la avena
-          como el yogurt griego le aportan proteína.
-        </p>
-        <p class="center final_page">
-          Recuerda que una dieta adecuada tiene variedad y te permite disfrutar
-          de tus comidas.
-        </p>
-      </section>
-    </main>
-    <div class="footer">
-      <p>© All rights reserved. Kenneth and Christofer, 2024.</p>
+<body>
+  <header style="z-index: 100;"><h1><a style="color: white;" href="/index.html">English Topics</a></h1></header>
+  <div id="nav-container">
+    <div class="bg"></div>
+    <div class="button" tabindex="0">
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
     </div>
-    <script src="../js/collapse.js"></script>
-    <script src="../js/scrollToDiv.js"></script>
-  </body>
+    <div id="nav-content" tabindex="0">
+      <ul>
+        <li><i class="fas fa-book"></i>
+          <a href="/html/alphabet.html">Alphabet</a>
+        </li>
+        <li><i class="fas fa-comments"></i>
+          <a class="final_page" href="/html/common_phrases.html">Common Phrases</a>
+        </li>
+        <li> <i class="fas fa-handshake"></i>
+          <a href="/html/greetings.html">Greetings</a>
+        </li>
+        <li><i class="fas fa-sort-numeric-down"></i>
+          <a href="/html/cardinal_ordinal.html">Cardinal and Ordinal</a>
+        </li>
+        <li><i class="fas fa-question-circle"></i>
+          <a href="/html/asking_answering.html"> Asking and Answering</a>
+        </li>
+        <li><i class="fas fa-chalkboard"></i>
+          <a href="/html/classroom_objects.html">Classroom Language</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+
+
+  <main>
+    <h1 style="padding-top: 2.5rem;">Common Phrases</h1>
+    <section class="main contenedor shadow">
+      <div class="info_principal">
+        <div class="text-column">
+          <p>
+            Para las personas que intentan reducir su consumo de calorías, o
+            bien reducir los carbohidratos y aumentar la proteína,
+            <span class="red_text">esta receta es ideal.</span>
+          </p>
+          <p>
+            No es necesario dejar de lado el pan, con esta receta es posible
+            hacerlo sin usar harina.
+          </p>
+          <p>¡Con pocos ingredientes y alta en proteína!</p>
+        </div>
+        <div class="image-column">
+          <img src="../img/pan_avena.jpg" loading="lazy" width="200" alt="avena_pan" />
+        </div>
+      </div>
+      <button class="collapse-btn" onclick="toggleCollapse('ingredientes-collapse')">
+        Ingredientes
+      </button>
+      <div id="ingredientes-collapse" class="collapse">
+        <ul>
+          <li>- 1/3 taza (30 gramos) de avena</li>
+          <li>- ½ cucharadita de polvo de hornear</li>
+          <li>- 1 cucharada de yogurt natural o griego.</li>
+          <li>- 1 huevo</li>
+          <li>- 1 pizca de sola</li>
+        </ul>
+      </div>
+
+      <button class="collapse-btn" onclick="toggleCollapse('pasos-collapse')">
+        Pasos a seguir
+      </button>
+      <div id="pasos-collapse" class="collapse">
+        <ol>
+          <li>1. Colocar en un recipiente 1/3 taza (30 gramos) de avena.</li>
+          <li>
+            2. Se agrega ½ cucharadita de polvo de hornear y una cucharadita
+            de agua.
+          </li>
+          <li>3. Se mezclan los ingredientes y dejan remojar 5 minutos.</li>
+          <li>
+            4. Se agrega 1 cucharada de yogurt natural o griego, 1 huevo y 1
+            pizca de sal.
+          </li>
+          <li>5. Se revuelve hasta que quede una mezcla consistente.</li>
+          <li>6. Precalentar la sartén a fuego medio bajo.</li>
+          <li>
+            7. Agregar la mezcla a la sartén y añadir orégano, nueces o
+            especies al gusto.
+          </li>
+          <li>8. Esperar 5 minutos hasta que la masa esté sólida.</li>
+        </ol>
+      </div>
+      <div class="table">
+        <div class="table-container">
+          <table>
+            <caption>
+              100 gramos de yogurt griego
+            </caption>
+            <tr>
+              <th>Característica</th>
+              <th>Valor</th>
+            </tr>
+            <tr>
+              <td>Calorías</td>
+              <td>120 kc</td>
+            </tr>
+            <tr>
+              <td>Azúcar</td>
+              <td>4 g</td>
+            </tr>
+            <tr>
+              <td>Proteína</td>
+              <td>10 g</td>
+            </tr>
+          </table>
+        </div>
+
+        <div class="paragraphs-container">
+          <p>
+            Una vez preparado este delicioso pan de avena, podemos comerlo
+            así, o cortarlo a la mitad y hacer un sándwich, usando el relleno
+            que deseemos: pollo, carne, jamón, acompañado de lechuga, queso,
+            aderezos y vegetales.
+          </p>
+        </div>
+      </div>
+      <p>
+        Esta saludable opción tiene alrededor 140 calorías y tanto la avena
+        como el yogurt griego le aportan proteína.
+      </p>
+      <p class="center red_text">
+        Recuerda que una dieta adecuada tiene variedad y te permite disfrutar
+        de tus comidas.
+      </p>
+    </section>
+  </main>
+  <div class="footer">
+    <p>© All rights reserved. Kenneth and Christofer, 2024.</p>
+  </div>
+  <script src="../js/collapse.js"></script>
+  <script src="../js/scrollToDiv.js"></script>
+</body>
+
 </html>
