--- a/html/cardinal_ordinal.html
+++ b/html/cardinal_ordinal.html
@@ -177,7 +177,7 @@
     </section>
   </main>
   <div class="footer">
-    <p>© All rights reserved. Kenneth and Christofer, 2024.</p>
+    <p>© All rights reserved. Kenneth Fernandez and Christofer Chaves, 2024.</p>
   </div>
   <script src="../js/collapse.js"></script>
   <script src="../js/scrollToDiv.js"></script>
