--- a/index.html
+++ b/index.html
@@ -56,10 +56,7 @@
       <h1 >Welcome to English Topics</h1>
       <p>
         Explore a variety of essential English topics to enhance your language
-        skills and fluency. Whether you're mastering the alphabet, learning
-        common phrases, practicing greetings, or delving into more advanced
-        topics like cardinal and ordinal numbers, asking and answering
-        questions, or classroom language, we have resources to support your
+        skills and fluency. Whether you're mastering the alphabet to classroom language, we have resources to support your
         learning journey.
       </p>
     </div>
@@ -97,15 +94,6 @@
       Begin your exploration now and unlock the doors to greater linguistic
       proficiency!
     </p>
-
-    <!-- <div id="carrousel">
-        <img
-          id="carrousel-image"
-          src="js/../img/avena_img.jpg"
-          alt="imagen_avena"
-          loading="lazy"
-        />
-      </div> -->
 
     <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
       <div class="carousel-indicators">
@@ -153,7 +141,7 @@
     </p>
   </div>
   <div class="footer">
-    <p>© All rights reserved. Kenneth and Christofer, 2024.</p>
+    <p>© All rights reserved. Kenneth Fernandez and Christofer Chaves, 2024.</p>
   </div>
   <script src="./js/carrousel.js"></script>
   <script src="./js/scrollToDiv.js"></script>
